--- a/index.html
+++ b/index.html
@@ -144,28 +144,28 @@
             <div class="row">
                 <div class="col-sm-6 col-lg-3 col-xl-3">
                     <div>
-                        <img class="img-fluid" src="img/typography.jpg" alt="">
+                        <img class="img-fluid" src="img/typography.jpg" alt="" style="width:100%">
                         <h3 class="d-flex justify-content-center align-items-center">TYPOGRAPHY LAB</h3>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-lg-3 col-xl-3">
                     <div>
-                        <img class="img-fluid" src="img/coding.jpg" alt="">
+                        <img class="img-fluid" src="img/coding.jpg" alt="" style="width:100%">
                         <h3 class="d-flex justify-content-center align-items-center">PHP CODING</h3>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-lg-3 col-xl-3">
                     <div>
-                        <img class="img-fluid" src="img/online_marketing.jpg" alt="">
+                        <img class="img-fluid" src="img/online_marketing.jpg" alt="" style="width:100%">
                         <h3 class="d-flex justify-content-center align-items-center">ONLINE MARKETING</h3>
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-lg-3 col-xl-3">
                     <div>
-                        <img class="img-fluid" src="img/design.jpg" alt="">
+                        <img class="img-fluid" src="img/design.jpg" alt="" style="width:100%">
                         <h3 class="d-flex justify-content-center align-items-center">INTERFACE DESIGN</h3>
                     </div>
                 </div>
